memoryblock halfway done, decided on octree to store block type and state